# monad360_pc

.github/workflows/: rust.yml
src/: TEST.JS  app_id.html  chart.html  chart_quant.html  index.html  index.js  main.js  styles.css  verbal_erro_chart.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  host.rs  main.rs  queries.rs  ui_commands.rs
